--- a/test/css/icon.css
+++ b/test/css/icon.css
@@ -20,12 +20,12 @@ a[href*='}{']::after{ content:'}{';}
 
 .iocn_ext1{ background-image:url(../slice/icon_wait.png);}
 .iocn_ext1{ background-image:url(../slice/icon_wait.png); /* repeat test */}
-.iocn_ext2{ background-image:url(../slice/icon_wait_nofile.png);}
+.iocn_ext2{ background-image:url(../slice/icon_wait_nofile.png); /* no file */}
 .iocn_ext3{ background:url(../slice/icon_wait.png) no-repeat;}
 .iocn_ext4{ background:#fff url(../slice/icon_wait.png) no-repeat;}
 
-.iocn_ext5{ background-image:url(/slice/icon_wait.png) no-repeat;}
-.iocn_ext6{ background-image:url(http://127.0.0.1/slice/icon_wait.png) no-repeat;}
+.iocn_ext5{ background-image:url(/slice/icon_wait.png);}
+.iocn_ext6{ background-image:url(http://127.0.0.1/slice/icon_wait.png);}
 
 .iocn_ext7{
 	/* multi-line test */
@@ -36,14 +36,14 @@ a[href*='}{']::after{ content:'}{';}
 .iocn_ext8{
 	/* content test */
 	content: '}';
-	background:url(../slice/icon_wait.png) no-repeat;
-	background-image:url(../slice/icon_wait.png) no-repeat;
+	background:url(../slice/icon_tip-warn.png) no-repeat;
+	background-image:url(../slice/icon_tip-warn.png) no-repeat;
 }
 
 #iocn_ext9{
 	background:url(../slice/icon_wait.png) no-repeat;
-	background-image:url(../slice/icon_wait.png) no-repeat;
+	background-image:url(../slice/icon_wait.png);
 	content: '}';
 }
 
-span{ background:url(/slice/icon_wait.png) no-repeat; _background-image:url(../slice/icon_wait.png) no-repeat; }
+span{ background:url(../slice/icon_wait.png) no-repeat; }
