--- a/test/css/icon.css
+++ b/test/css/icon.css
@@ -20,27 +20,29 @@ a[href*='}{']::after{ content:'}{';}
 
 .iocn_ext1{ background-image:url(../slice/icon_wait.png);}
 .iocn_ext1{ background-image:url(../slice/icon_wait.png); /* repeat test */}
-.iocn_ext2{ background-image:url(../slice/icon_wait_nofile.png); /* no file */}
-.iocn_ext3{ background:url(../slice/icon_wait.png) no-repeat;}
-.iocn_ext4{ background:#fff url(../slice/icon_wait.png) no-repeat;}
+/* miss semicolon test */
+.iocn_ext2{ height:14px; width:14px; background-image:url(../slice/icon_wait.png)}
+.iocn_ext3{ background-image:url(../slice/icon_wait_nofile.png); /* no file test */}
+.iocn_ext4{ background:url(../slice/icon_wait.png) no-repeat;}
+.iocn_ext5{ background:#fff url(../slice/icon_wait.png) no-repeat;}
 
-.iocn_ext5{ background-image:url(/slice/icon_wait.png);}
-.iocn_ext6{ background-image:url(http://127.0.0.1/slice/icon_wait.png);}
+.iocn_ext7{ background-image:url(/slice/icon_wait.png);}
+.iocn_ext8{ background-image:url(http://127.0.0.1/slice/icon_wait.png);}
 
-.iocn_ext7{
+.iocn_ext9{
 	/* multi-line test */
 	background:url(/slice/icon_wait.png) no-repeat;
 	_background-image:url(../slice/icon_wait.png) no-repeat;
 }
 
-.iocn_ext8{
+.iocn_ext10{
 	/* content test */
 	content: '}';
 	background:url(../slice/icon_tip-warn.png) no-repeat;
 	background-image:url(../slice/icon_tip-warn.png) no-repeat;
 }
 
-#iocn_ext9{
+#iocn_ext11{
 	background:url(../slice/icon_wait.png) no-repeat;
 	background-image:url(../slice/icon_wait.png);
 	content: '}';
