基础流程调整

--- a/test/css/icon.css
+++ b/test/css/icon.css
@@ -11,12 +11,12 @@ a[href*='}{']::after{ content:'}{';}
 
 a[href*='}{']::after{ content:'}{';}
 
-.icon_switch-off{background-image:url("../slice/icon_switch-off.png");width:71px;height:29px}
+/*.icon_switch-off{background-image:url("../slice/icon_switch-off.png");width:71px;height:29px}
 .icon_switch-on{background-image:url("../slice/icon_switch-on.png");width:71px;height:29px}
 .icon_tip-error{background-image:url("../slice/icon_tip-error.png");width:24px;height:24px}
 .icon_tip-ok{background-image:url("../slice/icon_tip-ok.png");width:24px;height:24px}
 .icon_tip-warn{background-image:url("../slice/icon_tip-warn.png");width:24px;height:24px}
-.icon_wait{background-image:url("../slice/icon_wait.png");width:14px;height:14px}
+.icon_wait{background-image:url("../slice/icon_wait.png") !important;width:14px;height:14px}*/
 
 .iocn_ext1{ background-image:url(../slice/icon_wait.png);}
 .iocn_ext1{ background-image:url(../slice/icon_wait.png); /* repeat test */}
