--- a/test/publish/css/icon.sprite.css
+++ b/test/publish/css/icon.sprite.css
@@ -7,24 +7,24 @@
 
 a[href*='}{']::after{ content:'}{';}
 
-.icon_switch-off{background-image:url("../images/icon.png?20150118224441");background-position: 0 0;width:71px;height:29px}
+.icon_switch-off{background-image:url("../slice/icon_switch-off.png");width:71px;height:29px}
 
 a[href*='}{']::after{ content:'}{';}
 
-/*.icon_switch-off{background-image:url("../images/icon.png?20150118224441");background-position: 0 0;width:71px;height:29px}
-.icon_switch-on{background-image:url("../images/icon.png?20150118224441");background-position: 0 -31px;width:71px;height:29px}
-.icon_tip-error{background-image:url("../images/icon.png?20150118224441");background-position: -73px 0;width:24px;height:24px}
-.icon_tip-ok{background-image:url("../images/icon.png?20150118224441");background-position: -73px -26px;width:24px;height:24px}
-.icon_tip-warn{background-image:url("../images/icon.png?20150118224441");background-position: 0 -62px;width:24px;height:24px}
-.icon_wait{background-image:url("../images/icon.png?20150118224441");background-position: -26px -62px;width:14px;height:14px}*/
+/*.icon_switch-off{background-image:url("../slice/icon_switch-off.png");width:71px;height:29px}
+.icon_switch-on{background-image:url("../slice/icon_switch-on.png");width:71px;height:29px}
+.icon_tip-error{background-image:url("../slice/icon_tip-error.png");width:24px;height:24px}
+.icon_tip-ok{background-image:url("../slice/icon_tip-ok.png");width:24px;height:24px}
+.icon_tip-warn{background-image:url("../slice/icon_tip-warn.png");width:24px;height:24px}
+.icon_wait{background-image:url("../slice/icon_wait.png") !important;width:14px;height:14px}*/
 
-.iocn_ext1{ background-image:url(../images/icon.png?20150118224441);background-position: -26px -62px;}
-.iocn_ext1{ background-image:url(../images/icon.png?20150118224441);background-position: -26px -62px; /* repeat test */}
+.iocn_ext1{ background-image:url(../slice/icon_wait.png);}
+.iocn_ext1{ background-image:url(../slice/icon_wait.png); /* repeat test */}
 /* miss semicolon test */
-.iocn_ext2{ height:14px; width:14px; background-image:url(../images/icon.png?20150118224441);background-position: -26px -62px;}
+.iocn_ext2{ height:14px; width:14px; background-image:url(../slice/icon_wait.png)}
 .iocn_ext3{ background-image:url(../slice/icon_wait_nofile.png); /* no file test */}
-.iocn_ext4{ background:url(../images/icon.png?20150118224441) no-repeat;background-position: -26px -62px;}
-.iocn_ext5{ background:#fff url(../images/icon.png?20150118224441) no-repeat;background-position: -26px -62px;}
+.iocn_ext4{ background:url(../slice/icon_wait.png) no-repeat;}
+.iocn_ext5{ background:#fff url(../slice/icon_wait.png) no-repeat;}
 
 .iocn_ext7{ background-image:url(/slice/icon_wait.png);}
 .iocn_ext8{ background-image:url(/w/grunt-css-sprite/test/slice/icon_wait.png);}
@@ -32,41 +32,20 @@ a[href*='}{']::after{ content:'}{';}
 .iocn_ext9{
 	/* multi-line test */
 	background:url(/slice/icon_wait.png) no-repeat;
-	_background-image:url(../images/icon.png?20150118224441) no-repeat;background-position: -26px -62px;
+	_background-image:url(../slice/icon_wait.png) no-repeat;
 }
 
 .iocn_ext10{
 	/* content test */
 	content: '}';
-	background:url(../images/icon.png?20150118224441) no-repeat;background-position: 0 -62px;
-	background-image:url(../images/icon.png?20150118224441) no-repeat;background-position: 0 -62px;
+	background:url(../slice/icon_tip-warn.png) no-repeat;
+	background-image:url(../slice/icon_tip-warn.png) no-repeat;
 }
 
 #iocn_ext11{
-	background:url(../images/icon.png?20150118224441) no-repeat;background-position: -26px -62px;
-	background-image:url(../images/icon.png?20150118224441);background-position: -26px -62px;
+	background:url(../slice/icon_wait.png) no-repeat;
+	background-image:url(../slice/icon_wait.png);
 	content: '}';
 }
 
-span{ background:url(../images/icon.png?20150118224441) no-repeat;background-position: -26px -62px; }
-
-
-/* ../images/icon@2x.png?20150118224441 */
-@media only screen and (-o-min-device-pixel-ratio: 3/2), only screen and (min--moz-device-pixel-ratio: 1.5), only screen and (-webkit-min-device-pixel-ratio: 1.5), only screen and (min-resolution: 240dpi), only screen and (min-resolution: 2dppx) {
-  .icon_switch-off,
-  *.icon_switch-off,
-  .icon_switch-on,
-  .icon_tip-error,
-  .icon_tip-ok,
-  .icon_tip-warn,
-  .icon_wait { background-image:url(../images/icon@2x.png?20150118224441); background-size:96px auto;}
-  .icon_switch-off { background-position: 0 0;}
-  *.icon_switch-off { background-position: 0 0;}
-  .icon_switch-on { background-position: 0 -30px;}
-  .icon_tip-error { background-position: -72px 0;}
-  .icon_tip-ok { background-position: -72px -25px;}
-  .icon_tip-warn { background-position: 0 -60px;}
-  .icon_wait { background-position: -25px -60px;}
-}
-
-.css_stamp{ content:"20150118224441";}
+span{ background:url(../slice/icon_wait.png) no-repeat; }
