--- a/test/publish/css/imageset/icon.imageset.css
+++ b/test/publish/css/imageset/icon.imageset.css
@@ -7,47 +7,77 @@
 
 a[href*='}{']::after{ content:'}{';}
 
-.icon_switch-off{background-image:url("../../images/imageset/icon.png?20150117213315");background-image: -webkit-image-set(url(../../images/imageset/icon.png?20150117213315) 1x, url(../../images/imageset/icon@2x.png?20150117213315) 2x); background-image: -moz-image-set(url(../../images/imageset/icon.png?20150117213315) 1x, url(../../images/imageset/icon@2x.png?20150117213315) 2x); background-image: -ms-image-set(url(../../images/imageset/icon.png?20150117213315) 1x, url(../../images/imageset/icon@2x.png?20150117213315) 2x); background-image: image-set(url(../../images/imageset/icon.png?20150117213315) 1x, url(../../images/imageset/icon@2x.png?20150117213315) 2x);background-position: 0 0;width:71px;height:29px}
+.icon_switch-off{@$sprite_place_35$@width:71px;height:29px}
 
 a[href*='}{']::after{ content:'}{';}
 
-.icon_switch-off{background-image:url("../../images/imageset/icon.png?20150117213315");background-image: -webkit-image-set(url(../../images/imageset/icon.png?20150117213315) 1x, url(../../images/imageset/icon@2x.png?20150117213315) 2x); background-image: -moz-image-set(url(../../images/imageset/icon.png?20150117213315) 1x, url(../../images/imageset/icon@2x.png?20150117213315) 2x); background-image: -ms-image-set(url(../../images/imageset/icon.png?20150117213315) 1x, url(../../images/imageset/icon@2x.png?20150117213315) 2x); background-image: image-set(url(../../images/imageset/icon.png?20150117213315) 1x, url(../../images/imageset/icon@2x.png?20150117213315) 2x);background-position: 0 0;width:71px;height:29px}
-.icon_switch-on{background-image:url("../../images/imageset/icon.png?20150117213315");background-image: -webkit-image-set(url(../../images/imageset/icon.png?20150117213315) 1x, url(../../images/imageset/icon@2x.png?20150117213315) 2x); background-image: -moz-image-set(url(../../images/imageset/icon.png?20150117213315) 1x, url(../../images/imageset/icon@2x.png?20150117213315) 2x); background-image: -ms-image-set(url(../../images/imageset/icon.png?20150117213315) 1x, url(../../images/imageset/icon@2x.png?20150117213315) 2x); background-image: image-set(url(../../images/imageset/icon.png?20150117213315) 1x, url(../../images/imageset/icon@2x.png?20150117213315) 2x);background-position: 0 -31px;width:71px;height:29px}
-.icon_tip-error{background-image:url("../../images/imageset/icon.png?20150117213315");background-image: -webkit-image-set(url(../../images/imageset/icon.png?20150117213315) 1x, url(../../images/imageset/icon@2x.png?20150117213315) 2x); background-image: -moz-image-set(url(../../images/imageset/icon.png?20150117213315) 1x, url(../../images/imageset/icon@2x.png?20150117213315) 2x); background-image: -ms-image-set(url(../../images/imageset/icon.png?20150117213315) 1x, url(../../images/imageset/icon@2x.png?20150117213315) 2x); background-image: image-set(url(../../images/imageset/icon.png?20150117213315) 1x, url(../../images/imageset/icon@2x.png?20150117213315) 2x);background-position: -73px 0;width:24px;height:24px}
-.icon_tip-ok{background-image:url("../../images/imageset/icon.png?20150117213315");background-image: -webkit-image-set(url(../../images/imageset/icon.png?20150117213315) 1x, url(../../images/imageset/icon@2x.png?20150117213315) 2x); background-image: -moz-image-set(url(../../images/imageset/icon.png?20150117213315) 1x, url(../../images/imageset/icon@2x.png?20150117213315) 2x); background-image: -ms-image-set(url(../../images/imageset/icon.png?20150117213315) 1x, url(../../images/imageset/icon@2x.png?20150117213315) 2x); background-image: image-set(url(../../images/imageset/icon.png?20150117213315) 1x, url(../../images/imageset/icon@2x.png?20150117213315) 2x);background-position: -73px -26px;width:24px;height:24px}
-.icon_tip-warn{background-image:url("../../images/imageset/icon.png?20150117213315");background-image: -webkit-image-set(url(../../images/imageset/icon.png?20150117213315) 1x, url(../../images/imageset/icon@2x.png?20150117213315) 2x); background-image: -moz-image-set(url(../../images/imageset/icon.png?20150117213315) 1x, url(../../images/imageset/icon@2x.png?20150117213315) 2x); background-image: -ms-image-set(url(../../images/imageset/icon.png?20150117213315) 1x, url(../../images/imageset/icon@2x.png?20150117213315) 2x); background-image: image-set(url(../../images/imageset/icon.png?20150117213315) 1x, url(../../images/imageset/icon@2x.png?20150117213315) 2x);background-position: 0 -62px;width:24px;height:24px}
-.icon_wait{background-image:url("../../images/imageset/icon.png?20150117213315");background-image: -webkit-image-set(url(../../images/imageset/icon.png?20150117213315) 1x, url(../../images/imageset/icon@2x.png?20150117213315) 2x); background-image: -moz-image-set(url(../../images/imageset/icon.png?20150117213315) 1x, url(../../images/imageset/icon@2x.png?20150117213315) 2x); background-image: -ms-image-set(url(../../images/imageset/icon.png?20150117213315) 1x, url(../../images/imageset/icon@2x.png?20150117213315) 2x); background-image: image-set(url(../../images/imageset/icon.png?20150117213315) 1x, url(../../images/imageset/icon@2x.png?20150117213315) 2x);background-position: -26px -62px;width:14px;height:14px}
+.icon_switch-off{background-position: 0 0;width:71px;height:29px}
+.icon_switch-on{background-position: 0 -31px;width:71px;height:29px}
+.icon_tip-error{background-position: -73px 0;width:24px;height:24px}
+.icon_tip-ok{background-position: -73px -26px;width:24px;height:24px}
+.icon_tip-warn{background-position: 0 -62px;width:24px;height:24px}
+.icon_wait{background-position: -26px -62px;width:14px;height:14px}
 
-.iocn_ext1{ background-image:url(../../images/imageset/icon.png?20150117213315);background-image: -webkit-image-set(url(../../images/imageset/icon.png?20150117213315) 1x, url(../../images/imageset/icon@2x.png?20150117213315) 2x); background-image: -moz-image-set(url(../../images/imageset/icon.png?20150117213315) 1x, url(../../images/imageset/icon@2x.png?20150117213315) 2x); background-image: -ms-image-set(url(../../images/imageset/icon.png?20150117213315) 1x, url(../../images/imageset/icon@2x.png?20150117213315) 2x); background-image: image-set(url(../../images/imageset/icon.png?20150117213315) 1x, url(../../images/imageset/icon@2x.png?20150117213315) 2x);background-position: -26px -62px;}
-.iocn_ext1{ background-image:url(../../images/imageset/icon.png?20150117213315);background-image: -webkit-image-set(url(../../images/imageset/icon.png?20150117213315) 1x, url(../../images/imageset/icon@2x.png?20150117213315) 2x); background-image: -moz-image-set(url(../../images/imageset/icon.png?20150117213315) 1x, url(../../images/imageset/icon@2x.png?20150117213315) 2x); background-image: -ms-image-set(url(../../images/imageset/icon.png?20150117213315) 1x, url(../../images/imageset/icon@2x.png?20150117213315) 2x); background-image: image-set(url(../../images/imageset/icon.png?20150117213315) 1x, url(../../images/imageset/icon@2x.png?20150117213315) 2x);background-position: -26px -62px; /* repeat test */}
+/* comments test */
+/*.icon_switch-off{background-image:url("../slice/icon_switch-off.png");width:71px;height:29px}
+.icon_switch-on{background-image:url("../slice/icon_switch-on.png");width:71px;height:29px}
+.icon_tip-error{background-image:url("../slice/icon_tip-error.png");width:24px;height:24px}
+.icon_tip-ok{background-image:url("../slice/icon_tip-ok.png");width:24px;height:24px}
+.icon_tip-warn{background-image:url("../slice/icon_tip-warn.png");width:24px;height:24px}
+.icon_wait{background-image:url("../slice/icon_wait.png") !important;width:14px;height:14px}*/
+
+.iocn_ext1{ @$sprite_place_42$@}
+.iocn_ext1{ background-position: -26px -62px; /* repeat test */}
 /* miss semicolon test */
-.iocn_ext2{ height:14px; width:14px; background-image:url(../../images/imageset/icon.png?20150117213315);background-image: -webkit-image-set(url(../../images/imageset/icon.png?20150117213315) 1x, url(../../images/imageset/icon@2x.png?20150117213315) 2x); background-image: -moz-image-set(url(../../images/imageset/icon.png?20150117213315) 1x, url(../../images/imageset/icon@2x.png?20150117213315) 2x); background-image: -ms-image-set(url(../../images/imageset/icon.png?20150117213315) 1x, url(../../images/imageset/icon@2x.png?20150117213315) 2x); background-image: image-set(url(../../images/imageset/icon.png?20150117213315) 1x, url(../../images/imageset/icon@2x.png?20150117213315) 2x);background-position: -26px -62px;}
+.iocn_ext2{ height:14px; width:14px; background-position: -26px -62px;}
 .iocn_ext3{ background-image:url(../slice/icon_wait_nofile.png); /* no file test */}
-.iocn_ext4{ background:url(../../images/imageset/icon.png?20150117213315) no-repeat;background-image: -webkit-image-set(url(../../images/imageset/icon.png?20150117213315) 1x, url(../../images/imageset/icon@2x.png?20150117213315) 2x); background-image: -moz-image-set(url(../../images/imageset/icon.png?20150117213315) 1x, url(../../images/imageset/icon@2x.png?20150117213315) 2x); background-image: -ms-image-set(url(../../images/imageset/icon.png?20150117213315) 1x, url(../../images/imageset/icon@2x.png?20150117213315) 2x); background-image: image-set(url(../../images/imageset/icon.png?20150117213315) 1x, url(../../images/imageset/icon@2x.png?20150117213315) 2x);background-position: -26px -62px;}
-.iocn_ext5{ background:#fff url(../../images/imageset/icon.png?20150117213315) no-repeat;background-image: -webkit-image-set(url(../../images/imageset/icon.png?20150117213315) 1x, url(../../images/imageset/icon@2x.png?20150117213315) 2x); background-image: -moz-image-set(url(../../images/imageset/icon.png?20150117213315) 1x, url(../../images/imageset/icon@2x.png?20150117213315) 2x); background-image: -ms-image-set(url(../../images/imageset/icon.png?20150117213315) 1x, url(../../images/imageset/icon@2x.png?20150117213315) 2x); background-image: image-set(url(../../images/imageset/icon.png?20150117213315) 1x, url(../../images/imageset/icon@2x.png?20150117213315) 2x);background-position: -26px -62px;}
+.iocn_ext4{ background: no-repeat;background-position: -26px -62px;}
+.iocn_ext5{ background:#fff no-repeat;background-position: -26px -62px;}
 
+/* path test */
 .iocn_ext7{ background-image:url(/slice/icon_wait.png);}
-.iocn_ext8{ background-image:url(../../images/imageset/icon.png?20150117213315);background-image: -webkit-image-set(url(../../images/imageset/icon.png?20150117213315) 1x, url(../../images/imageset/icon@2x.png?20150117213315) 2x); background-image: -moz-image-set(url(../../images/imageset/icon.png?20150117213315) 1x, url(../../images/imageset/icon@2x.png?20150117213315) 2x); background-image: -ms-image-set(url(../../images/imageset/icon.png?20150117213315) 1x, url(../../images/imageset/icon@2x.png?20150117213315) 2x); background-image: image-set(url(../../images/imageset/icon.png?20150117213315) 1x, url(../../images/imageset/icon@2x.png?20150117213315) 2x);background-position: -26px -62px;}
+.iocn_ext8{ background-position: -26px -62px;}
 
 .iocn_ext9{
 	/* multi-line test */
 	background:url(/slice/icon_wait.png) no-repeat;
-	_background-image:url(../../images/imageset/icon.png?20150117213315) no-repeat;background-image: -webkit-image-set(url(../../images/imageset/icon.png?20150117213315) 1x, url(../../images/imageset/icon@2x.png?20150117213315) 2x); background-image: -moz-image-set(url(../../images/imageset/icon.png?20150117213315) 1x, url(../../images/imageset/icon@2x.png?20150117213315) 2x); background-image: -ms-image-set(url(../../images/imageset/icon.png?20150117213315) 1x, url(../../images/imageset/icon@2x.png?20150117213315) 2x); background-image: image-set(url(../../images/imageset/icon.png?20150117213315) 1x, url(../../images/imageset/icon@2x.png?20150117213315) 2x);background-position: -26px -62px;
+	background-image: no-repeat;background-position: -26px -62px;
 }
 
 .iocn_ext10{
 	/* content test */
 	content: '}';
-	background:url(../../images/imageset/icon.png?20150117213315) no-repeat;background-image: -webkit-image-set(url(../../images/imageset/icon.png?20150117213315) 1x, url(../../images/imageset/icon@2x.png?20150117213315) 2x); background-image: -moz-image-set(url(../../images/imageset/icon.png?20150117213315) 1x, url(../../images/imageset/icon@2x.png?20150117213315) 2x); background-image: -ms-image-set(url(../../images/imageset/icon.png?20150117213315) 1x, url(../../images/imageset/icon@2x.png?20150117213315) 2x); background-image: image-set(url(../../images/imageset/icon.png?20150117213315) 1x, url(../../images/imageset/icon@2x.png?20150117213315) 2x);background-position: 0 -62px;
-	background-image:url(../../images/imageset/icon.png?20150117213315) no-repeat;background-image: -webkit-image-set(url(../../images/imageset/icon.png?20150117213315) 1x, url(../../images/imageset/icon@2x.png?20150117213315) 2x); background-image: -moz-image-set(url(../../images/imageset/icon.png?20150117213315) 1x, url(../../images/imageset/icon@2x.png?20150117213315) 2x); background-image: -ms-image-set(url(../../images/imageset/icon.png?20150117213315) 1x, url(../../images/imageset/icon@2x.png?20150117213315) 2x); background-image: image-set(url(../../images/imageset/icon.png?20150117213315) 1x, url(../../images/imageset/icon@2x.png?20150117213315) 2x);background-position: 0 -62px;
+	background: no-repeat;background-position: 0 -62px;
+	_background-image:url(../slice/icon_tip-warn.png);
 }
 
 #iocn_ext11{
-	background:url(../../images/imageset/icon.png?20150117213315) no-repeat;background-image: -webkit-image-set(url(../../images/imageset/icon.png?20150117213315) 1x, url(../../images/imageset/icon@2x.png?20150117213315) 2x); background-image: -moz-image-set(url(../../images/imageset/icon.png?20150117213315) 1x, url(../../images/imageset/icon@2x.png?20150117213315) 2x); background-image: -ms-image-set(url(../../images/imageset/icon.png?20150117213315) 1x, url(../../images/imageset/icon@2x.png?20150117213315) 2x); background-image: image-set(url(../../images/imageset/icon.png?20150117213315) 1x, url(../../images/imageset/icon@2x.png?20150117213315) 2x);background-position: -26px -62px;
-	background-image:url(../../images/imageset/icon.png?20150117213315);background-image: -webkit-image-set(url(../../images/imageset/icon.png?20150117213315) 1x, url(../../images/imageset/icon@2x.png?20150117213315) 2x); background-image: -moz-image-set(url(../../images/imageset/icon.png?20150117213315) 1x, url(../../images/imageset/icon@2x.png?20150117213315) 2x); background-image: -ms-image-set(url(../../images/imageset/icon.png?20150117213315) 1x, url(../../images/imageset/icon@2x.png?20150117213315) 2x); background-image: image-set(url(../../images/imageset/icon.png?20150117213315) 1x, url(../../images/imageset/icon@2x.png?20150117213315) 2x);background-position: -26px -62px;
+	@$sprite_place_50$@
+	background-position: 0 -62px;
 	content: '}';
 }
 
-span{ background:url(../../images/imageset/icon.png?20150117213315) no-repeat;background-image: -webkit-image-set(url(../../images/imageset/icon.png?20150117213315) 1x, url(../../images/imageset/icon@2x.png?20150117213315) 2x); background-image: -moz-image-set(url(../../images/imageset/icon.png?20150117213315) 1x, url(../../images/imageset/icon@2x.png?20150117213315) 2x); background-image: -ms-image-set(url(../../images/imageset/icon.png?20150117213315) 1x, url(../../images/imageset/icon@2x.png?20150117213315) 2x); background-image: image-set(url(../../images/imageset/icon.png?20150117213315) 1x, url(../../images/imageset/icon@2x.png?20150117213315) 2x);background-position: -26px -62px; }
+span{ background: no-repeat;background-position: -26px -62px; }
 
-.css_stamp{ content:"20150117213315";}
+
+/* ../../images/imageset/icon.png?20150128153834 */
+.icon_switch-off,
+.icon_switch-on,
+.icon_tip-error,
+.icon_tip-ok,
+.icon_tip-warn,
+.icon_wait,
+.iocn_ext1,
+.iocn_ext2,
+.iocn_ext4,
+.iocn_ext5,
+.iocn_ext8,
+.iocn_ext9,
+.iocn_ext10,
+#iocn_ext11,
+span{
+background-image: url(../../images/imageset/icon.png?20150128153834);
+background-image: -webkit-image-set(url(../../images/imageset/icon.png?20150128153834) 1x, url(../../images/imageset/icon@2x.png?20150128153834) 2x); background-image: -moz-image-set(url(../../images/imageset/icon.png?20150128153834) 1x, url(../../images/imageset/icon@2x.png?20150128153834) 2x); background-image: -ms-image-set(url(../../images/imageset/icon.png?20150128153834) 1x, url(../../images/imageset/icon@2x.png?20150128153834) 2x); background-image: image-set(url(../../images/imageset/icon.png?20150128153834) 1x, url(../../images/imageset/icon@2x.png?20150128153834) 2x);
+}
+
+.css_stamp{ content:"20150128153834";}
