--- a/test/publish/css/icon.sprite.css
+++ b/test/publish/css/icon.sprite.css
@@ -7,7 +7,7 @@
 
 a[href*='}{']::after{ content:'}{';}
 
-.icon_switch-off{@$sprite_place_9$@width:71px;height:29px}
+.icon_switch-off{background-position: 0 0;width:71px;height:29px}
 
 a[href*='}{']::after{ content:'}{';}
 
@@ -26,7 +26,7 @@ a[href*='}{']::after{ content:'}{';}
 .icon_tip-warn{background-image:url("../slice/icon_tip-warn.png");width:24px;height:24px}
 .icon_wait{background-image:url("../slice/icon_wait.png") !important;width:14px;height:14px}*/
 
-.iocn_ext1{ @$sprite_place_16$@}
+.iocn_ext1{ background-position: -26px -62px;}
 .iocn_ext1{ background-position: -26px -62px; /* repeat test */}
 /* miss semicolon test */
 .iocn_ext2{ height:14px; width:14px; background-position: -26px -62px;}
@@ -52,7 +52,7 @@ a[href*='}{']::after{ content:'}{';}
 }
 
 #iocn_ext11{
-	@$sprite_place_23$@
+	background: no-repeat;background-position: -26px -62px;
 	background-position: 0 -62px;
 	content: '}';
 }
@@ -60,7 +60,7 @@ a[href*='}{']::after{ content:'}{';}
 span{ background: no-repeat;background-position: -26px -62px; }
 
 
-/* ../images/icon.png?20150128153834 */
+/* ../images/icon.png?20150128161219 */
 .icon_switch-off,
 .icon_switch-on,
 .icon_tip-error,
@@ -75,11 +75,11 @@ span{ background: no-repeat;background-position: -26px -62px; }
 .iocn_ext10,
 #iocn_ext11,
 span{
-background-image: url(../images/icon.png?20150128153834);
+background-image: url(../images/icon.png?20150128161219);
 }
 
 
-/* ../images/icon@2x.png?20150128153834 */
+/* ../images/icon@2x.png?20150128161219 */
 @media only screen and (-o-min-device-pixel-ratio: 3/2), only screen and (min--moz-device-pixel-ratio: 1.5), only screen and (-webkit-min-device-pixel-ratio: 1.5), only screen and (min-resolution: 240dpi), only screen and (min-resolution: 2dppx) {
 .icon_switch-off,
 .icon_switch-on,
@@ -95,7 +95,7 @@ background-image: url(../images/icon.png?20150128153834);
 .iocn_ext10,
 #iocn_ext11,
 span{
-background-image: url(../images/icon@2x.png?20150128153834);
+background-image: url(../images/icon@2x.png?20150128161219);
 background-size: 96px auto;
 }
 .icon_switch-off{
@@ -142,4 +142,4 @@ background-position: -25px -60px;
 } 
 }
 
-.css_stamp{ content:"20150128153834";}
+.css_stamp{ content:"20150128161219";}
