--- a/test/css/icon.css
+++ b/test/css/icon.css
@@ -16,7 +16,7 @@ a[href*='}{']::after{ content:'}{';}
 .icon_tip-error{background-image:url("../slice/icon_tip-error.png");width:24px;height:24px}
 .icon_tip-ok{background-image:url("../slice/icon_tip-ok.png");width:24px;height:24px}
 .icon_tip-warn{background-image:url("../slice/icon_tip-warn.png");width:24px;height:24px}
-.icon_wait{background-image:url("../slice/icon_wait.png");width:14px;height:14px}
+.icon_wait{background-image:url("../slice/icon_wait.png?v=1234");width:14px;height:14px}
 
 /* comments test */
 /*.icon_switch-off{background-image:url("../slice/icon_switch-off.png");width:71px;height:29px}
