--- a/test/publish/css/imageset/icon.imageset.css
+++ b/test/publish/css/imageset/icon.imageset.css
@@ -13,10 +13,10 @@ a[href*='}{']::after{ content:'}{';}
 
 .icon_switch-off{background-position: 0 0;width:71px;height:29px}
 .icon_switch-on{background-position: 0 -31px;width:71px;height:29px}
-.icon_tip-error{background-position: -73px 0;width:24px;height:24px}
-.icon_tip-ok{background-position: -73px -26px;width:24px;height:24px}
-.icon_tip-warn{background-position: 0 -62px;width:24px;height:24px}
-.icon_wait{background-position: -26px -62px;width:14px;height:14px}
+.icon_tip-error{background-position: 0 -62px;width:24px;height:24px}
+.icon_tip-ok{background-position: -26px -62px;width:24px;height:24px}
+.icon_tip-warn{background-position: -73px 0;width:24px;height:24px}
+.icon_wait{background-position: -73px -26px;width:14px;height:14px}
 
 /* comments test */
 /*.icon_switch-off{background-image:url("../slice/icon_switch-off.png");width:71px;height:29px}
@@ -26,41 +26,41 @@ a[href*='}{']::after{ content:'}{';}
 .icon_tip-warn{background-image:url("../slice/icon_tip-warn.png");width:24px;height:24px}
 .icon_wait{background-image:url("../slice/icon_wait.png") !important;width:14px;height:14px}*/
 
-.iocn_ext1{ background-position: -26px -62px;}
-.iocn_ext1{ background-position: -26px -62px; /* repeat test */}
+.iocn_ext1{ background-position: -73px -26px;}
+.iocn_ext1{ background-position: -73px -26px; /* repeat test */}
 /* miss semicolon test */
-.iocn_ext2{ height:14px; width:14px; background-position: -26px -62px;}
+.iocn_ext2{ height:14px; width:14px; background-position: -73px -26px;}
 .iocn_ext3{ background-image:url(../slice/icon_wait_nofile.png); /* no file test */}
-.iocn_ext4{ background: no-repeat;background-position: -26px -62px;}
-.iocn_ext5{ background:#fff no-repeat;background-position: -26px -62px;}
+.iocn_ext4{ background: no-repeat;background-position: -73px -26px;}
+.iocn_ext5{ background:#fff no-repeat;background-position: -73px -26px;}
 
 /* path test */
 .iocn_ext7{ background-image:url(/slice/icon_wait.png);}
-.iocn_ext8{ background-position: -26px -62px;}
+.iocn_ext8{ background-position: -73px -26px;}
 
 .iocn_ext9{
 	/* multi-line test */
 	background:url(/slice/icon_wait.png) no-repeat;
-	background-image: no-repeat;background-position: -26px -62px;
+	background-image: no-repeat;background-position: -73px -26px;
 }
 
 .iocn_ext10{
 	/* content test */
 	content: '}';
-	background: no-repeat;background-position: 0 -62px;
+	background: no-repeat;background-position: -73px 0;
 	_background-image:url(../slice/icon_tip-warn.png);
 }
 
 #iocn_ext11{
-	background: no-repeat;background-position: -26px -62px;
-	background-position: 0 -62px;
+	background: no-repeat;background-position: -73px -26px;
+	background-position: -73px 0;
 	content: '}';
 }
 
-span{ background: no-repeat;background-position: -26px -62px; }
+span{ background: no-repeat;background-position: -73px -26px; }
 
 
-/* ../../images/imageset/icon.png?20150128164736 */
+/* ../../images/imageset/icon.png?20150202013244 */
 .icon_switch-off,
 .icon_switch-on,
 .icon_tip-error,
@@ -76,8 +76,8 @@ span{ background: no-repeat;background-position: -26px -62px; }
 .iocn_ext10,
 #iocn_ext11,
 span{
-background-image: url(../../images/imageset/icon.png?20150128164736);
-background-image: -webkit-image-set(url(../../images/imageset/icon.png?20150128164736) 1x, url(../../images/imageset/icon@2x.png?20150128164736) 2x); background-image: -moz-image-set(url(../../images/imageset/icon.png?20150128164736) 1x, url(../../images/imageset/icon@2x.png?20150128164736) 2x); background-image: -ms-image-set(url(../../images/imageset/icon.png?20150128164736) 1x, url(../../images/imageset/icon@2x.png?20150128164736) 2x); background-image: image-set(url(../../images/imageset/icon.png?20150128164736) 1x, url(../../images/imageset/icon@2x.png?20150128164736) 2x);
+background-image: url(../../images/imageset/icon.png?20150202013244);
+background-image: -webkit-image-set(url(../../images/imageset/icon.png?20150202013244) 1x, url(../../images/imageset/icon@2x.png?20150202013244) 2x); background-image: -moz-image-set(url(../../images/imageset/icon.png?20150202013244) 1x, url(../../images/imageset/icon@2x.png?20150202013244) 2x); background-image: -ms-image-set(url(../../images/imageset/icon.png?20150202013244) 1x, url(../../images/imageset/icon@2x.png?20150202013244) 2x); background-image: image-set(url(../../images/imageset/icon.png?20150202013244) 1x, url(../../images/imageset/icon@2x.png?20150202013244) 2x);
 }
 
-.css_stamp{ content:"20150128164736";}
+.css_stamp{ content:"20150202013244";}
